# ManDir

./: README.md  hello.py  pyproject.toml
examples/: Image_and_data_save.py  usage.ipynb
src/ManDir/: __init__.py  mandir.py
